<resources>
    <string name="app_name">Homes &amp; Rentals</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="phone">phone</string>
    <string name="registration_done">registration_done</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title</string>
    <string name="price">price</string>
    <string name="description">description</string>
    <string name="currency">currency</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_search">Search</string>
    <string name="bottom_nav_add_property">Add</string>
    <string name="bottom_nav_property">Property</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="bottom_nav_favorites">Favorites</string>
    <string name="usd">USD</string>
    <string name="ushs">USHS</string>
    <string name="for_sale">FOR SALE</string>
    <string name="for_rent">FOR RENT</string>
    <string name="add_property_location">Add location</string>
    <string name="add_property_media">Add media</string>
    <string name="add_property">Add property</string>
    <string name="title_activity_maps">Map</string>
    <string name="next">NEXT</string>
    <string name="add_images">add images</string>
    <string name="submit_property">Submit Property</string>
    <string name="add_media">Add Media</string>
    <string name="CLOUDINARY_API_SECRET">wKdnjINOVDIg3LWC8A83L3fA_vA</string>
    <string name="CLOUDINARY_API_KEY">225221816666612</string>
    <string name="CLOUDINARY_CLOUD_NAME">dx3ksne0c</string>
    <string name="sample_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="upload">Upload</string>
</resources>
