<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
        >

    <item
            android:title="@string/add_property_location"
            android:id="@+id/add_property_location"
            android:icon="@drawable/ic_location"
            app:showAsAction="ifRoom"
            />

    <item
            android:title="@string/add_property_media"
            android:id="@+id/add_property_media"
            android:icon="@drawable/ic_camera"
            app:showAsAction="ifRoom"
            />
    <item
            android:title="@string/add_property"
            android:id="@+id/add_property"
            android:icon="@drawable/ic_done_white"
            app:showAsAction="ifRoom"
            />

</menu>