<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".authentication.view.SignUpFragment">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerUsernameEdt"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:padding="8dp"
                android:hint="@string/username"
                android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerEmailEdt"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerPhoneEdt"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:padding="8dp"
                android:inputType="phone"
                android:hint="@string/phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerPasswordEdt"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:padding="8dp"
                android:inputType="textPassword"
                android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>